syntax = "proto3";

package v1;

// Blob connection specification
message BlobConnection {
    // Blob
    string blob = 1;
}

// Host path connection specification
message HostPathConnection {
    // host path
    string host_path = 1;

    // Mount path
    string mount_path = 2;

    // Read Only
    bool read_only = 3;
}

// Claim connection specification
message ClaimConnection {
    // Claim name
    string volume_claim = 1;

    // Mount path
    string mount_path = 2;

    // Read Only
    bool read_only = 3;
}

// Host connection
message HostConnection {
    // Url
    string url = 1;

    // insecure
    bool insecure = 3;
}

message ConnectionScema {
    oneof connection {
        BlobConnection blob_connection = 1;
        HostPathConnection host_path_connection = 2;
        ClaimConnection claim_connection = 3;
        HostConnection host_connection = 4;
    }
}
